test_programs/compile_failure/implicit_numeric_generics_type/src/main.nr
struct Foo<N> {
    inner: [Field; N],
}

fn main() { }
